--- a/mentions-légales/mentionlegale.css
+++ b/mentions-légales/mentionlegale.css
@@ -166,12 +166,14 @@
 .search-mobile input:first-child {
     padding-left: 10px;
 }
-/* Fin de la section hrgb(87, 0, 0)£*0/
-/* --debut css banniere-- */
-.alternance-banniere{
-    background-image: url(https://img.freepik.com/photos-gratuite/groupe-multiethnique-jeunes-hommes-femmes-etudiant-interieur_1139-989.jpg?size=626&ext=jpg&ga=GA1.2.12207566.1692912950&semt=sph);
-    background-position: center;
+/* Fin de la section hrgb(87, 0, 0)£*/
+
+/* debut css contenu */
+/* css banniere */
+.mlegal-banniere{
+    background-image: url(https://img.freepik.com/photos-gratuite/prise-vue-grand-angle-marteau-documents-proces-surface-bois_181624-57259.jpg?size=626&ext=jpg&ga=GA1.2.12207566.1692912950&semt=ais);
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     height: 500px;
     width: 100%;
@@ -179,7 +181,7 @@
     flex-wrap: wrap;
     place-content: center;
 }
-.alternance-banniere::before{
+.mlegal-banniere::before{
     content: '';
     background-color: #06114d8b;
     height: 500px;
@@ -187,166 +189,41 @@
     position: absolute;
     z-index: 1;
 }
-.alternance-banniere h1{
+.mlegal-banniere h1{
     color: white;
     font-weight: bold;
     font-size: 80px;
     position: relative;
     z-index: 2;
 }
-.alternance-banniere p{
+.mlegal-banniere p{
     color: white;
-    z-index: 2;
-    font-size: 25px;
+    font-weight: bold;
+    /* font-size: 80px; */
     position: absolute;
-    top: 300px;
-}
-.alternance-banniere a{
-    text-decoration: none;
-    color: white;
-}
-.alternance-banniere-carte{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-.alternance-banniere-carte-item{
-    background-color: #f6f6f6;
-    width: 13%;
-    height: 130px;
-    align-items: center;
-    text-align: center;
-    box-shadow: 2px 2px 2px var(--rouge);
-    margin-top: -50px;
     z-index: 2;
-    padding-top: 8px;
-    margin-bottom: 40px;
+    top: 330px;
 }
-.alternance-banniere-carte-item h2{
-    color: var(--rouge);
+.mlegal-banniere p a{
+    color: white;
 }
-/* --fin css banniere-- */
-
-/* --debut css contenu-- */
-.alternance-titre{
-    color: var(--rouge);
-    font-size: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    place-content: center;
+/* fin css banniere */
+.mlegal-content{
+    margin: 60px 0;
 }
-.alternance-content{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    margin: 20px 15px;
-}
-.alternance-content-left{
-    background-color: #f6f6f6;
-    width: 100%;
+.mlegal-content1{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 300px;
-    border-radius: 10px;
-    margin-top: 55px;
-}
-.alternance-content-left hr{
-    width: 15%;
-}
-.alternance-content-left h3, .alternance-content-left p{
     justify-content: justify;
-    margin: 0 auto;
-}
-.alternance-content-left h3{
-    color: var(--rouge);
-}
-.alternance-content-left button{
-    border: none;
-    background-color: var(--rouge);
-    border-radius: 10px;
-    width: 40%;
-    height: 35px;
-    margin-top: 20px;
-    color: white;
-    font-weight: bold;
-}
-.alternance-content-right{
-    background-color: #f6f6f6;
-    border-radius: 10px;
-    height: 420px;
-    padding-top: 20px;
-    display: flex;
-    flex-direction: column;
+    text-align: center;
     align-items: center;
-    justify-content: center;
-}
-.alternance-content-right-items{
-    display: flex;
-    flex-wrap: wrap;
     margin: 0 auto;
 }
-.alternance-content-right-items p{
-    padding-left: 17px;
-}
-.alternance-content-right-items p{
-    justify-content: justify;
-}
-.alternance-titre-right{
-    text-align: center;
-    font-size: 20px;
-}
-.alternance-content-right-button button{
-    border: none;
-    background-color: var(--rouge);
-    border-radius: 10px;
-    width: 70%;
-    height: 35px;
-    margin-top: 20px;
-    color: white;
-    font-weight: bold;
-    border: none;
-}
-.alternance-content-two h3{
+.mlegal-content1 h2{
     color: var(--rouge);
-    font-size: 30px;
-    margin-top: 20px;
-    border-radius: 1px solid black;
 }
-.alternance-content-two{
-    text-align: center;
-}
-.alternance-content-two-card{
-    display: flex;
-}
-.btn{
-    background-color: var(--rouge);
-    border: none;
-    font-weight: bold;
-}
-.alternance-content-three-item{
-    display: flex;
-    justify-content: space-evenly;
-    background-color: #f6f6f6;
-    width: 80%;
-    margin: 0 auto;
-    border: 5px dotted var(--rouge);
-    height: 230px;
-    padding-top: 20px;
-    margin-bottom: 50px;
-}
-.alternance-number{
-    color: var(--rouge);
-    font-weight: bold;
-    font-size: 30px;
-}
-.alternance-content-three-items a{
-    color: var(--rouge);
-    text-decoration:underline;
-}
-/* --fin css contenu-- */
 
+/* fin css contenu */
 
 /* css footer */
 .antifaq{
@@ -371,18 +248,10 @@ ul li a{
 svg{
     color: var(--rouge);
 }
-/* li::before{
-    content:".";
-    color: var(--rouge);
-    width: 5em;
 
-} */
 .point{
     width: 1px;
 
-}
-footer{
-    border: 1px solid red;
 }
 footer h4{
     font-weight: bolder;
