--- a/header-footer/header.css
+++ b/header-footer/header.css
@@ -2,7 +2,9 @@
 #header {
     position: fixed;
     width: 100%;
-    border: 1px solid rgb(0, 0, 0);
+    z-index: 100;
+    background-color: white;
+    top: 0;
 }
 .header-top {
     background-color: #F6F6F6;
@@ -12,6 +14,11 @@
 .section-left {
     gap: 10px;
 }
+.banner{
+    position: relative;
+    /* top: 5px; */
+}
+
 @media screen and (max-width: 575.98px) {
     .media-element {
         transform: scale(0.8);
