--- a/blockchain/blockchain.css
+++ b/blockchain/blockchain.css
@@ -66,7 +66,7 @@ body{
     margin-bottom: 90px;
     /* overflow-x: scroll; */
 }
-.blockchain-content h2{
+.blockchain-content h2, .blockchain-content1 h2{
     color: var(--rouge);
     text-align: center;
     margin-bottom: 50px;
@@ -102,6 +102,14 @@ body{
     font-size: 20px;
     margin-top: 15px;
 }
+.blockchain-content1{
+    margin-bottom: 80px;
+}
+/* .accordion-item{
+    margin-bottom: 30px;
+    height: 50px;
+    border: 1px solid var(--gris);
+} */
 /* fin css du contenu */
 
 /* media queries */
