--- a/pedagogie/pedagogie.css
+++ b/pedagogie/pedagogie.css
@@ -195,7 +195,7 @@ main h1{
 }
 .card img{
     border: 1px solid #000;
-    border-radius: 100% ;
+    border-radius: 100px;
     padding: 20px;
     width: 40%;
     margin-top: 10%;
