--- a/nos-actions-pour-les-femmes/actionfemme.css
+++ b/nos-actions-pour-les-femmes/actionfemme.css
@@ -51,13 +51,182 @@ body{
 .action-titre{
     color: white;
     font-weight: bold;
-    /* font-size: 80px; */
     position: absolute;
     z-index: 2;
     top: 300px;
-    /* left: 10px; */
+    text-align: center;
 }
 .action-banniere p a{
     color: white;
 }
+.action-banniere-carte{
+    display: flex;
+    justify-content: space-between;
+}
+.action-banniere-carte-item{
+    background-color: #f6f6f6;
+    width: 30%;
+    height: 130px;
+    align-items: center;
+    text-align: center;
+    box-shadow: 2px 2px 2px var(--bleu);
+    margin-top: -50px;
+    z-index: 2;
+    padding-top: 8px;
+    margin-bottom: 40px;
+}
+.action-banniere-carte-item h2{
+    color: var(--rouge);
+}
+.action-banniere-carte-item p{
+    font-weight: bold;
+}
 /* fin css de la banniere */
+
+/* début css du contenu */
+.action-item{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #f6f6f6;
+    width: 90%;
+    height: 350px;
+    /* border: 2px solid rgb(16, 13, 13); */
+    align-items: center;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    /* margin: 0 auto; */
+}
+.action-item img, .action-item1 img{
+    width: 500px;
+    height: 300px;
+    border-radius: 30px;
+}
+.action-item-text{
+    background-color: white;
+    /* border: 2px solid red; */
+    width: 50%;
+    height: 200px;
+    text-align: center;
+    align-items: center;
+    border-radius: 20px;
+}
+.action-item1{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: var(--rouge);
+    width: 90%;
+    height: 350px;
+    /* border: 2px solid rgb(16, 13, 13); */
+    align-items: center;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+.action-slider{
+    width: 60%;
+    margin: 0 auto;
+    background-color: #f6f6f6;
+    height: 220px;
+    border-radius: 15px;
+    align-items: center;
+    text-align: center;
+    padding-top: 10px;
+    margin-bottom: 50px;
+}
+.action-slider-item h2{
+    text-align: center;
+}
+.action-slider-item p{
+    text-align: center;
+}
+.action-slider-item button{
+    background-color: var(--rouge);
+    border: none;
+    width: 40%;
+    color: white;
+    margin: 0 auto;
+    padding: 5px 0;
+    border-radius: 10px;
+}
+/* fin css du contenu */
+
+
+/* debut media queries */
+@media screen and (width <= 900px) {
+    .action-item, .action-item1{
+        display: grid;
+        grid-template-columns: 1fr;
+        height: auto;
+        width: 80%;
+       
+    }
+    .action-item img, .action-item1 img {
+        width: 100%;
+        margin-bottom: 20px;
+        padding-top: 10px;
+    }
+    .action-item-text, .action-item1-text {
+        margin-bottom: 20px;
+        height: auto;
+        margin-top: 10px;
+    }
+    .action-banniere-carte{
+        display: grid;
+        grid-template-columns: auto ;
+        row-gap: 30px;
+        margin-top: 25px;
+        margin-bottom: 10px;
+    }
+    .action-banniere-carte-item{
+        width: 250px;
+    }
+    .action-banniere h1{
+        font-size: 60px;
+    }
+    .action-slider{
+        height: auto;
+    }
+    .action-slider-item button{
+      margin-bottom: 20px;
+    }
+}
+@media screen and (width <= 390px) {
+    .action-item, .action-item1{
+        display: grid;
+        grid-template-columns: 1fr;
+        height: auto;
+        width: 80%;
+       
+    }
+    .action-item img, .action-item1 img {
+        width: 100%;
+        margin-bottom: 20px;
+        padding-top: 10px;
+    }
+    .action-item-text, .action-item1-text {
+        margin-bottom: 20px;
+        height: auto;
+        margin-top: 10px;
+    }
+    .action-banniere-carte{
+        display: grid;
+        grid-template-columns: auto ;
+        row-gap: 30px;
+        margin-top: 25px;
+        margin-bottom: 10px;
+    }
+    .action-banniere-carte-item{
+        width: 250px;
+    }
+    .action-banniere h1{
+        font-size: 60px;
+    }
+    .action-slider{
+        height: auto;
+    }
+    .action-slider-item button{
+      margin-bottom: 20px;
+      width: 50%;
+      font-size: 13px;
+    }
+}
+/* fin media queries */
