--- a/qui-sommes-nous/qsnous.css
+++ b/qui-sommes-nous/qsnous.css
@@ -230,7 +230,7 @@
 .qsnous-content-1{
     margin: 70px;
     /* width: 80%; */
-    border: 1px solid rgb(0, 0, 0);
+    /* border: 1px solid rgb(0, 0, 0); */
 
 }
 .qsnous-filter{
@@ -282,6 +282,13 @@
         width: 80%;
     
     }
+}
+@media screen and (width <= 390px) {
+    .qsnous-edit{
+        width: 200%;
+        text-align: center;
+    }
+    
 }
 /* fin css contenu */
 /* css footer */
