--- a/agile/agile.css
+++ b/agile/agile.css
@@ -368,17 +368,21 @@ body {
 }
 .offre-sector {
     text-align: center;
-    padding: 30px;
 }
 .of-div {
     padding: 30px;
-    margin: 16px;
+    margin: 16px 0;
     background-color: white;
-    min-height: 260px;
+    min-height: 240px;
     min-width: 170px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+@media screen and (max-width: 991.98px) {
+    .of-div {
+        min-height: min-content;
+    }
 }
 .offre-sector h3 {
     color: var(--base-color);
