--- a/devenir-formateur/formateur.css
+++ b/devenir-formateur/formateur.css
@@ -3,13 +3,25 @@
 .banner{
     margin-top: 100px;
 }
+.banner::after {
+    content: "";
+    height: 400px;
+    width: 100%;
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.7);
+    /* z-index: 50; */
+}
 .banner img{
     height: 400px;
 }
 .carousel-caption{
-    background-color: rgb(0, 0, 0,0.5);
-    bottom: 25%;
+    /* background-color: rgb(0, 0, 0,0.5); */
+    /* bottom: 25%; */
     color: white;
+    bottom: 25%;
+        /* color: white; */
+    
+        z-index: 60;
 }
 .carousel-caption h3{
     font-weight: bolder;
@@ -46,6 +58,10 @@
 
 
 }
+.bouttonOffreFormation:hover{
+    color: var(--rouge);
+    border: 2px solid var(--rouge)
+}
 
 
 
@@ -67,3 +83,71 @@
 
 
 /* end responsive */
+
+
+
+ .modalite1 {
+     max-width: 1100px;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     flex-wrap: wrap;
+     padding: 20px;
+     gap: 20px 20px;
+ }
+  .box {
+      /* calcule largeur d'un div */
+      width: calc(33% - 10px);
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px 30px;
+      border-radius: 5px;
+
+  }
+
+  .box .quote i {
+      margin-top: 10px;
+      font-size: 45px;
+      color: #17c0eb
+  }
+
+  .container .box .image {
+      margin: 10px 0;
+      height: 150px;
+      width: 150px;
+      background: black;
+      padding: 3px;
+      border-radius: 50%;
+  }
+
+  .box .image img {
+      height: 100%;
+      width: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #fff;
+  }
+
+  .box p {
+      text-align: justify;
+      margin-top: 8px;
+      font-size: 12px;
+      /* font-weight: 400; */
+  }
+ 
+
+  .box .name_job {
+      margin: 10px 0 3px 0;
+      color: #8e44ad;
+      font-size: 18px;
+      font-weight: 600;
+  }
+
+  .rating i {
+      font-size: 18px;
+      color: #8e44ad;
+      margin-bottom: 5px;
+  }
