--- a/numerique-inclusif/numeriqueInclusif.css
+++ b/numerique-inclusif/numeriqueInclusif.css
@@ -1,6 +1,28 @@
 /* banniere */
 .banner {
     margin-top: 100px;
+
+}
+.banner::after {
+    content: "";
+    height: 400px;
+    width: 100%;
+    position: absolute;
+    background-color: rgb(0, 0, 0,0.7);
+    /* z-index: 50; */
+}
+.raccoursi{
+    position: absolute;
+    bottom: 7%;
+    width: 40%;
+    padding: 10px;
+    z-index: 60;
+}
+.raccoursi a{
+
+    color:white;
+    font-weight: bold;
+    
 }
 
 .banner img {
@@ -8,9 +30,12 @@
 }
 
 .carousel-caption {
-    background-color: rgb(0, 0, 0, 0.5);
+    
+   
     bottom: 25%;
     color: white;
+    
+    z-index: 60;
     
 }
 
@@ -31,7 +56,7 @@
 
 
 
-/* modalite */
+/* section modalite */
 
 
   .modalite{
