--- a/pedagogie/pedagogie.css
+++ b/pedagogie/pedagogie.css
@@ -173,7 +173,7 @@ main {
 
 
 .banier {
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     /* background-image: url(../public/image/fro.PNG); */
     background:linear-gradient(0deg, rgba(3, 3, 3, 0.603), rgba(15, 20, 25, 0.699)), url(../public/image/fro.PNG), no-repeat;
     background-size: cover;
@@ -182,42 +182,31 @@ main {
     /* padding: 310px; */
     /* background-image:url(../public/image/fro.PNG); */
 }
-main h1{
-    border: 1px solid #000;
+.banier h1{
+    color: white;
+    text-align: center;
+    background-color: #4e4c4c52;
+    padding: 10px;
+    width: 50%;
+    margin: 0 auto;
+    border: 2px solid rgba(255, 255, 255, 0.308);
+    border-radius: 15px;
+}
+.pedagogie{
+    border: 2px solid rgb(199, 9, 9);
+    padding: 10px;
+    margin-top: 10%;
+    border-radius: 20px;
+    width: 70%;
+    margin-left: 15%;
+}
+.pedagogie h1{
     text-align: center;
 }
-.competence{
-    display: flex;
-    justify-content: space-around;
-}
-.card{
-    margin: 3%;
-}
-.card img{
-    border: 1px solid #000;
-    border-radius: 100px;
-    padding: 20px;
-    width: 40%;
-    margin-top: 10%;
-}
-.pilier{
-    /* background-image: url(../public/image/tra.PNG); */
-    padding: 200px;
-    width: 99%;
-    background:linear-gradient(0deg, rgba(3, 3, 3, 0.603), rgba(15, 20, 25, 0.699)), url(../public/image/tra.PNG), no-repeat;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 1px solid #000;
-    margin-left: 2%;
-
-}
-.pilier h1{
-    margin-top: -21%;
-    color: white;
-}
-.pilier p{
-    color: white;
-}
+/* .pedagogie h4{ */
+    /* text-align: center;
+    margin-top: 15%;
+    font-size:60px */
 
 
 /* footer */
@@ -283,4 +272,208 @@ footer h4{
         text-decoration: underline ;
     }
     
+}
+
+
+/* banniere */
+.banner {
+    margin-top: 100px;
+}
+
+.banner img {
+    height: 400px;
+}
+
+.carousel-caption {
+    background-color: rgb(0, 0, 0, 0.5);
+    bottom: 25%;
+    color: white;
+    
+}
+
+.carousel-caption h3 {
+    font-weight: bolder;
+    font-size: large;
+}
+
+/* end banniere */
+
+/* section text */
+.description{
+    border: 2px solid var(--rouge);
+    border-radius: 15px 50px;
+}
+
+/* end text */
+
+
+
+/* modalite */
+
+
+  .modalite{
+    max-width: 1100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+    gap: 20px 20px;
+}
+
+ .box {
+    /* calcule largeur d'un div */
+    width: calc(33% - 10px);
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 30px;
+    border-radius: 5px;
+    
+}
+
+ .box .quote i {
+    margin-top: 10px;
+    font-size: 45px;
+    color: #17c0eb
+}
+
+.container  .box .image {
+    margin: 10px 0;
+    height: 150px;
+    width: 150px;
+    background: var(--rouge);
+    padding: 3px;
+    border-radius: 50%;
+}
+
+ .box .image img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #fff;
+}
+
+ .box p {
+    text-align: justify;
+    margin-top: 8px;
+    font-size: 14px;
+    /* font-weight: 400; */
+}
+
+ .box .name_job {
+    margin: 10px 0 3px 0;
+    color: #8e44ad;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+ .rating i {
+    font-size: 18px;
+    color: #8e44ad;
+    margin-bottom: 5px;
+}
+.btns {
+    margin-top: 20px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.btns button {
+    background:var(--rouge);
+    width: 100%;
+    padding: 9px 0px;
+    outline: none;
+    border: 2px solid var(--rouge);
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 400;
+    color:white;
+    transition: all 0.3s linear;
+}
+
+ 
+ 
+
+@media (max-width:1045px) {
+    .container  .box {
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width:710px) {
+    .container  .box {
+        width: 100%;
+    }
+}
+/* end modalite */
+
+
+
+/* section foundation */
+.bouttonActions {
+    color: white;
+    background-color: var(--rouge);
+    padding: 10px;
+
+
+}
+.bouttonActions:hover{
+    color: var(--rouge);
+    background-color:white;
+    border: 2px solid var(--rouge);
+}
+/* end section foundation */
+
+
+.chiffre h3{
+    text-align: center;
+    color: rgb(184, 8, 8);
+    font-size: 40px;
+}
+.cles{
+    /* border: 1px solid #000; */
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px 10px;
+    /* justify-content: space-around; */
+    background-image: url(../public/image/cla.PNG);
+    background:linear-gradient(0deg, rgba(3, 3, 3, 0.603), rgba(15, 20, 25, 0.699)), url(../public/image/cla.PNG), no-repeat;
+    padding: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+@media screen and (max-width: 768px){
+    .cles{
+        display: grid;
+    grid-template-columns: auto;
+    }
+    
+}
+#text{
+    color: white;
+    margin-top: 0%;
+    margin-left: 5%;
+}
+#num{
+    /* border: 1px solid #000; */
+    /* width: 905px; */
+    /* margin-left: 1%; */
+    background-color: #00000081;
+
+}
+#num :first-child{
+    color: red;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10%;
 }
