--- a/accueil/accueil.css
+++ b/accueil/accueil.css
@@ -350,6 +350,8 @@ body {
     text-align: left;
     border: none;
     font-weight: 700;
+    display: flex;
+    align-items: center;
 }
 
 .bouton-card button #i-1 {
@@ -359,6 +361,7 @@ body {
 .bouton-card button #cta {
     margin-left: 5px;
     display: none;
+    font-size: 0.7em;
 }
 
 .section-metiers {
@@ -418,6 +421,11 @@ body {
 }
 .metiers-items .mi-left .btn-card {
     background-color: white !important;
+}
+.btn-card a {
+    display: flex;
+    align-items: center;
+    color: black;
 }
 .temoignages {
     padding: 0 14%;
