--- a/developpeur-ia/developpeuria.css
+++ b/developpeur-ia/developpeuria.css
@@ -240,7 +240,7 @@ body {
 }
 
 .banner {
-    background-image: url("../accueil/images/agile-1.webp");
+    background-image: url("https://img.freepik.com/photos-gratuite/concept-transformation-numerique-fond-puce-technologie-ia_53876-124669.jpg?size=626&ext=jpg&ga=GA1.2.359486737.1694125754&semt=ais");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
