--- a/technicienne-assistance-informatique/technicienne-informatique.css
+++ b/technicienne-assistance-informatique/technicienne-informatique.css
@@ -240,7 +240,7 @@ body {
 }
 
 .banner {
-    background-image: url("../accueil/images/agile-1.webp");
+    background-image: url("https: //img.freepik.com/photos-gratuite/concept-collage-html-css-pirate_23-2150061984.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=ais");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
