--- a/former-salariés/former-salarie.css
+++ b/former-salariés/former-salarie.css
@@ -327,19 +327,7 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-.slider{
-  max-width: 1100px;
-  display: flex;
-}
-.slider .card{
-  flex: 1;
-  margin: 0 10px;
-  background: #fff;
-}
-.slider .card .img{
-  height: 200px;
-  width: 100%;
-}
+
 .slider .card .img img{
   height: 100%;
   width: 100%;
@@ -387,6 +375,19 @@ body {
     object-fit: cover;
 }
 
+.fondamentaux-bouton{
+    background-color: var(--noir);
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
+.fondamentaux-bouton:hover{
+    background-color: var(--rouge);
+    color: var(--rouge);
+    border: 1px solid var(--rouge);
+    border-radius: 10px;
+    font-weight: bold;
+}
 @media screen and (max-width: 419px) {
     .tout-ele {
         grid-template-columns: repeat(1, 1fr);
