--- a/former-salariés/former-salarie.css
+++ b/former-salariés/former-salarie.css
@@ -350,43 +350,37 @@ body {
   text-align: justify;
   margin: 10px 0;
 }
-.card .content .btn{
-  display: block;
-  text-align: left;
-  margin: 10px 0;
-}
-.card .content .btn button{
-  background: #e74c3c;
-  color: #fff;
-  border: none;
-  outline: none;
-  font-size: 17px;
-  padding: 5px 8px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.card .content .btn button:hover{
-  transform: scale(0.9);
-}
+
+
 .card  .img {
     width: 100%;
-    height: 200px;
+    height: 500px;
     object-fit: cover;
+    border-bottom: 20px solid var(--rouge);
 }
 
-.fondamentaux-bouton{
+.former-bouton{
     background-color: var(--noir);
     color: white;
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
+    font-weight: bold;
 }
-.fondamentaux-bouton:hover{
+.former-bouton:hover{
     background-color: var(--rouge);
-    color: var(--rouge);
+    color: var(--blanc);
     border: 1px solid var(--rouge);
     border-radius: 10px;
     font-weight: bold;
+}
+h4 p {
+    text-align: center;
+    margin: 0,auto;
+}
+.button-lean {
+    border-radius: 10px;
+    color: var(--rouge);
+    text-align: center;
 }
 @media screen and (max-width: 419px) {
     .tout-ele {
@@ -416,6 +410,18 @@ body {
 .content-ele {
     /* display: flex; */
 
+}
+.tite-content-form  {
+    border-left: 3px solid gray;
+    height: 100%;
+    margin: 2px;
+    padding: 2px;
+}
+.para-former {
+    margin: 10px;
+    padding-right:10px ;
+    margin-left: 10px;
+    padding: 20px;
 }
 @media screen and (max-width: 599.98px) {
     .corps {
