--- a/cloud-devops/cloud.css
+++ b/cloud-devops/cloud.css
@@ -29,7 +29,7 @@
 .cloud-banniere h1{
     color: white;
     font-weight: bold;
-    font-size: 80px;
+    font-size: 50px;
     position: relative;
     z-index: 2;
 }
@@ -92,6 +92,7 @@
 }
 .cloud-carte h3{
     text-align: left;
+    padding-left: 65px;
 }
 .cloud-carte-card .card img{
     height: 300px;
