--- a/mentions-légales/mentionlegale.css
+++ b/mentions-légales/mentionlegale.css
@@ -195,7 +195,7 @@
 .mlegal-banniere h1{
     color: white;
     font-weight: bold;
-    font-size: 80px;
+    font-size: 50px;
     position: relative;
     z-index: 2;
 }
@@ -217,13 +217,14 @@
 .mlegal-content1{
     display: flex;
     flex-direction: column;
-    justify-content: justify;
+    /* justify-content: justify; */
     text-align: center;
     align-items: center;
-    margin: 0 auto;
+    margin: 30px auto;
 }
 .mlegal-content1 h2{
     color: var(--rouge);
+    font-size: 40px;
 }
 @media screen and (width <= 900px) {
     .mlegal-content1{
